--- a/project.json
+++ b/project.json
@@ -29,7 +29,7 @@
         highlight: "ยอดเยี่ยมมาก คุณได้สร้าง เครื่องบิน X15 เครื่องบินที่ถือสถิติความเร็วที่ไม่มีใครทำลายได้อีกเลยตลอด 50 ปีที่ผ่านมา",
         details:"เครื่องบินความเร็วเหนือเสียงที่ดำเนินการโดยกองทัพสหรัฐอเมริกา โดยเป็นเครื่องบินที่เก็บบันทึกค่าความเร็วและระดับความสูงเมื่อถึงขอบอวกาศและส่งข้อมูลอันเป็นประโยชน์ที่ใช้ในการออกแบบเครื่องบินและยานอวกาศ",
         badge:"เจ้าแห่งความเร็ว",
-        budget:9,
+        budget:9000000,
         currency:"million",
         img:{badge_img:"b3.svg",
             project_img:"p3.jpg"
