--- a/project.json
+++ b/project.json
@@ -5,7 +5,7 @@
         highlight: "ยินดีด้วย คุณได้ส่งมนุษย์ไปเหยียบดวงจันทร์เป็นคนแรกได้สำเร็จ นี่คือเวลาประวัติศาสตร์ที่โลกต้องจารึก!!!",
         details:"Apollo 11 เป็นโครงการอวกาศที่มนุษย์ลงจอดบนดวงจันทร์ได้เป็นครั้งแรก โดยผู้บัญชาการนีลอาร์มสตรองและนักบินโมดูลดวงจันทร์ Buzz Aldrin จากลูกเรือชาวอเมริกันที่ลงจอดด้วย Apollo Lunar Module Eagle ซึ่ง นีล อาร์มสตรองได้กลายเป็นมนุษย์คนแรกที่ได้ก้าวขึ้นบนพื้นผิวดวงจันทร์",
         badge:"ผู้กล้าแห่งดวงจันทร์",
-        budget:152,
+        budget:152000000000,
         currency:"billion",
         img:{badge_img:"b1.svg",
             project_img:"p1.jpg"
@@ -17,7 +17,7 @@
         highlight: "คุณได้สร้างกล้องโทรทรรศน์อวกาศฮับเบิลที่แม้ไม่ได้เป็นกล้องโทรทรรศน์อวกาศตัวแรกของโลก แต่มันเป็นหนึ่งในเครื่องมือวิทยาศาสตร์ที่สำคัญที่สุดในประวัติศาสตร์การศึกษาดาราศาสตร์!!!",
         details:"กล้องโทรทรรศน์อวกาศฮับเบิล (อังกฤษ: Hubble Space Telescope) คือ กล้องโทรทรรศน์ในวงโคจรของโลกที่กระสวยอวกาศดิสคัฟเวอรีนำส่งขึ้นสู่วงโคจรเมื่อเดือนเมษายน ค.ศ. 1990 ตั้งชื่อตามนักดาราศาสตร์ชาวอเมริกันชื่อ เอ็ดวิน ฮับเบิล",
         badge:"กาแล็กซี่ที่กว้างใหญ่",
-        budget:36,
+        budget:36000000,
         currency:"million",
         img:{badge_img:"b2.svg",
             project_img:"p2.jpg"
@@ -29,7 +29,7 @@
         highlight: "ยอดเยี่ยมมาก คุณได้สร้าง เครื่องบิน X15 เครื่องบินที่ถือสถิติความเร็วที่ไม่มีใครทำลายได้อีกเลยตลอด 50 ปีที่ผ่านมา",
         details:"เครื่องบินความเร็วเหนือเสียงที่ดำเนินการโดยกองทัพสหรัฐอเมริกา โดยเป็นเครื่องบินที่เก็บบันทึกค่าความเร็วและระดับความสูงเมื่อถึงขอบอวกาศและส่งข้อมูลอันเป็นประโยชน์ที่ใช้ในการออกแบบเครื่องบินและยานอวกาศ",
         badge:"เจ้าแห่งความเร็ว",
-        budget:9,
+        budget:9000000,
         currency:"million",
         img:{badge_img:"b3.svg",
             project_img:"p3.jpg"
@@ -89,7 +89,7 @@
         highlight: "ยินดีด้วย! เรือที่คุณสร้างได้นำนักวิทยาศาสตร์เข้าสู่ขั้วโลกเหนือเพื่อสำรวจต้นตอของปัญหาภาวะโลกร้อน",
         details:"เรือวิจัยโลร์สเติร์นนำคณะนักวิทยาศาสตร์นานาชาติ ออกเดินทางจากท่าเรือเมืองทรอมโซในนอร์เวย์ มุ่งหน้าสู่ภูมิภาคอาร์ติกแถบขั้วโลกเหนือ ที่ซึ่งจะปักหลักอยู่นาน 1 ปี เพื่อทำการสำรวจวิจัยเกี่ยวกับการเปลี่ยนแปลงของสภาพภูมิอากาศโลก ซึ่งเป็นต้นตอของปัญหาภาวะโลกร้อน",
         badge:"กัปตันผู้พิชิตโลกร้อน",
-        budget:165,
+        budget:165000000,
         currency:"million",
         img:{badge_img:"b8.svg",
             project_img:"p8.jpg"
