--- a/project.json
+++ b/project.json
@@ -94,5 +94,29 @@
         img:{badge_img:"b8.svg",
             project_img:"p8.jpg"
         }
+    },
+    {
+        id: 9,
+        name: "Mars orbiter mission",
+        highlight: "ว้าว คุณได้สร้างเทคโนโลยีทางวิทยาศาสตร์เพื่อใช้ในการปฏิบัติการสำรวจดาวอังคารแล้ว",
+        details:"โครงการพัฒนาเทคโนโลยีสำหรับการออกแบบและการวางแผนจัดการ การปฎิบัติภารกิจระหว่างดาวเคราะห์ และ สำรวจลักษณะพื้นผิวของดาวอังคาร การสังเกตุชั้นบรรยากาศของดาวอังคารโดยใช้เครื่องมือทางวิทยาศาสตร์",
+        badge:"นักสำรวจดาวอังคาร",
+        budget:74000000,
+        currency:"million",
+        img:{badge_img:"b9.svg",
+            project_img:"p9.jpg"
+        }
+    },
+    {
+        id: 10,
+        name: "XMM-Newton",
+        highlight: "สุดยอด ด้วยกล้องโทรทรรศน์ที่คุณได้สร้างขึ้นทำให้สามารถส่องได้ออกนอกไปในอวกาศเพื่อเฝ้าดูความลับของจักรวาล",
+        details:"โครงการเกี่ยวกับการตรวจจับและศึกษาแหล่งกำเนิดรังสีเอกซ์บนท้องฟ้าผ่านดาวเทียมที่ติดตั้งกล้องโทรทรรศน์ในอวกาศเพราะเนื่องจากชั้นบรรยากาศของโลกปิดกั้นรังสีเอกซ์ทั้งหมด รวมถึงใช้ในการไขความลึกลับของจักรวาล",
+        badge:"สิ่งลึกลับในอวกาศ",
+        budget:816000000,
+        currency:"million",
+        img:{badge_img:"b10.svg",
+            project_img:"p10.jpg"
+        }
     }
 ]
