--- a/project.json
+++ b/project.json
@@ -2,7 +2,10 @@
     {
         id: 1,
         name: "Apollo 11",
-        highlight: "ยินดีด้วย คุณได้ส่งมนุษย์ไปเหยียบดวงจันทร์เป็นคนแรกได้สำเร็จ นี่คือเวลาประวัติศาสตร์ที่โลกต้องจารึก!!!",
+        result: "ยินดีด้วย คุณได้ส่งมนุษย์ไปเหยียบดวงจันทร์เป็นคนแรกได้สำเร็จ นี่คือเวลาประวัติศาสตร์ที่โลกต้องจารึก!!!",
+        token:2,
+        state:"good",
+        points:100,
         details:"Apollo 11 เป็นโครงการอวกาศที่มนุษย์ลงจอดบนดวงจันทร์ได้เป็นครั้งแรก โดยผู้บัญชาการนีลอาร์มสตรองและนักบินโมดูลดวงจันทร์ Buzz Aldrin จากลูกเรือชาวอเมริกันที่ลงจอดด้วย Apollo Lunar Module Eagle ซึ่ง นีล อาร์มสตรองได้กลายเป็นมนุษย์คนแรกที่ได้ก้าวขึ้นบนพื้นผิวดวงจันทร์",
         badge:"ผู้กล้าแห่งดวงจันทร์",
         budget:152000000000,
@@ -14,7 +17,7 @@
     {
         id: 2,
         name: "Hubble Space Telescope",
-        highlight: "คุณได้สร้างกล้องโทรทรรศน์อวกาศฮับเบิลที่แม้ไม่ได้เป็นกล้องโทรทรรศน์อวกาศตัวแรกของโลก แต่มันเป็นหนึ่งในเครื่องมือวิทยาศาสตร์ที่สำคัญที่สุดในประวัติศาสตร์การศึกษาดาราศาสตร์!!!",
+        result: "คุณได้สร้างกล้องโทรทรรศน์อวกาศฮับเบิลที่แม้ไม่ได้เป็นกล้องโทรทรรศน์อวกาศตัวแรกของโลก แต่มันเป็นหนึ่งในเครื่องมือวิทยาศาสตร์ที่สำคัญที่สุดในประวัติศาสตร์การศึกษาดาราศาสตร์!!!",
         details:"กล้องโทรทรรศน์อวกาศฮับเบิล (อังกฤษ: Hubble Space Telescope) คือ กล้องโทรทรรศน์ในวงโคจรของโลกที่กระสวยอวกาศดิสคัฟเวอรีนำส่งขึ้นสู่วงโคจรเมื่อเดือนเมษายน ค.ศ. 1990 ตั้งชื่อตามนักดาราศาสตร์ชาวอเมริกันชื่อ เอ็ดวิน ฮับเบิล",
         badge:"กาแล็กซี่ที่กว้างใหญ่",
         budget:36000000,
@@ -26,7 +29,7 @@
     {
         id: 3,
         name: "North American X-15",
-        highlight: "ยอดเยี่ยมมาก คุณได้สร้าง เครื่องบิน X15 เครื่องบินที่ถือสถิติความเร็วที่ไม่มีใครทำลายได้อีกเลยตลอด 50 ปีที่ผ่านมา",
+        result: "ยอดเยี่ยมมาก คุณได้สร้าง เครื่องบิน X15 เครื่องบินที่ถือสถิติความเร็วที่ไม่มีใครทำลายได้อีกเลยตลอด 50 ปีที่ผ่านมา",
         details:"เครื่องบินความเร็วเหนือเสียงที่ดำเนินการโดยกองทัพสหรัฐอเมริกา โดยเป็นเครื่องบินที่เก็บบันทึกค่าความเร็วและระดับความสูงเมื่อถึงขอบอวกาศและส่งข้อมูลอันเป็นประโยชน์ที่ใช้ในการออกแบบเครื่องบินและยานอวกาศ",
         badge:"เจ้าแห่งความเร็ว",
         budget:9000000,
@@ -38,7 +41,10 @@
     {
         id: 4,
         name: "Space Shuttle Challenger (OV-099)",
-        highlight: "พระเจ้าช่วย! นี่คือโศกนาฏกรรมอีกครั้งของนาซ่า กระสวยอวกาศระเบิด OV-099 ได้ระเบิดหลังพุ่งทยานขึ้นสู่ฟ้าและได้พรากชีวิตนักบินอวกาศของเราไปถึง 7 คน",
+        token:3,
+        state:"bad",
+        points:500,
+        result: "พระเจ้าช่วย! นี่คือโศกนาฏกรรมอีกครั้งของนาซ่า กระสวยอวกาศระเบิด OV-099 ได้ระเบิดหลังพุ่งทยานขึ้นสู่ฟ้าและได้พรากชีวิตนักบินอวกาศของเราไปถึง 7 คน",
         details:"กระสวยอวกาศชาเลนเจอร์ เป็นกระสวยอวกาศลำที่สองที่ใช้ปฏิบัติภารกิจในอวกาศขององค์การนาซ่า ปฏิบัติภารกิจมาแล้วถึง 9 ครั้งก่อนที่จะมาประสบอุบัติเหตุกระสวยอวกาศระเบิด(ในภารกิจที่ STS-51-L) ในวันที่ 28 มกราคม 1986 หลังจากที่ปล่อยกระสวยสู่ท้องฟ้าได้ 73 วินาที และนักบินอวกาศทั้ง 7 เสียชีวิตทั้งหมด",
         badge:"ความสูญเสียครั้งใหญ่",
         budget:0,
@@ -50,7 +56,7 @@
     {
         id: 5,
         name: "Orbiter Vehicle Designation (OV-102)",
-        highlight: "แย่แล้ว! ยานขนส่งอวกาศโคลัมเบียที่กำลังเดินทางกลับพื้นโลกเกิดการระเบิดขึ้น ทำให้สูญเสียนักบินของเราไปถึง 7 คน",
+        result: "แย่แล้ว! ยานขนส่งอวกาศโคลัมเบียที่กำลังเดินทางกลับพื้นโลกเกิดการระเบิดขึ้น ทำให้สูญเสียนักบินของเราไปถึง 7 คน",
         details:"ยานขนส่งอวกาศโคลัมเบียขององค์การนาซา เกิดการระเบิดเหนือท้องฟ้าของสหรัฐฯ ขณะกำลังเดินทางกลับสู่พื้นโลก อุบัติเหตุครั้งนี้ทำให้นักบิน 7 คนเสียชีวิต ยานขนส่งอวกาศโคลัมเบียระเบิดเมื่อเวลา 16 นาทีก่อนที่จะได้ร่อนลงจอดที่ศูนย์อวกาศเคเนดีในฟลอริดาตามกำหนดการ โคลัมเบียเพิ่งจะกลับจากการปฏิบัติภารกิจในวงโคจรรอบโลกเป็นเวลานาน 16 วัน ซึ่งมีเป้าหมายในการทดลองทางวิทยาศาสตร์หลายสิบรายการ",
         badge:"อุบัติเหตุร้ายแรงที่ไม่คาดคิด",
         budget:0,
@@ -62,7 +68,7 @@
     {
         id: 6,
         name: "Glory mission",
-        highlight: "แจ้งเตือน! ขณะนี้จรวด Taurus XLของเราที่ได้ส่งขึ้นไปไม่สามารถสลัดดาวเทียวออกจากตัวจรวดได้เพราะอุปกรณ์ไม่เป็นไปตามมาตรฐาน  ทำให้กระสวยและดาวเทียวตกอยู่กลางมหาสมุทร",
+        result: "แจ้งเตือน! ขณะนี้จรวด Taurus XLของเราที่ได้ส่งขึ้นไปไม่สามารถสลัดดาวเทียวออกจากตัวจรวดได้เพราะอุปกรณ์ไม่เป็นไปตามมาตรฐาน  ทำให้กระสวยและดาวเทียวตกอยู่กลางมหาสมุทร",
         details:"โครงการดาวเทียมที่วางแผนไว้เพื่อเฝ้าสังเกตระดับของก๊าซคาร์บอนไดออกไซด์ (CO2) ในชั้นบรรยากาศ และรวบรวมข้อมูลเพื่อทำความเข้าใจในวัฏจักรของธาตุคาร์บอน ในวันที่ 24 กุมภาพันธ์ ค.ศ. 2009 จรวดชื่อ Taurus XL ถูกส่งขึ้นไป เพื่อนำดาวเทียมเข้าสู่วงโคจร แต่เกิดความผิดพลาดขึ้น เนื่องจาก Payload fairing ไม่ได้ถูกสลัดออกจากดาวเทียมตามแผน ทำให้กระสวยทั้งหมดพร้อมกับดาวเทียมตกลงสู่มหาสมุทรใกล้กับแอนตาร์กติกา วันที่ 4 มีนาคม ค.ศ. 2011 เกิดความผิดพลาดในทำนองเดียวกัน ผลจากการสอบสวนพบว่าสาเหตุของความล้มเหลวทั้ง 2 ครั้ง เกิดจากชิ้นส่วนอลูมิเนียมที่ถูกอัดขึ้นรูป และใช้เป็นส่วนประกอบของ Payload fairing ที่ไม่เป็นไปตามมาตรฐาน",
         badge:"ความผิดพลาดจากอุปกรณ์ที่ผิดรูป",
         budget:0,
@@ -74,7 +80,7 @@
     {
         id: 7,
         name: "Soyuz MS-10",
-        highlight: "ทางเราพบว่ายานอวกาศ Soyuz MS-10 ของคุณเกิดอุบัติเหตุในการปล่อยยานทำให้ต้องกลับมายังโลก โชคดี! ทางเราไม่พบผู้เสียชีวิตในอุบัติเหตุ",
+        result: "ทางเราพบว่ายานอวกาศ Soyuz MS-10 ของคุณเกิดอุบัติเหตุในการปล่อยยานทำให้ต้องกลับมายังโลก โชคดี! ทางเราไม่พบผู้เสียชีวิตในอุบัติเหตุ",
         details:"ยานอวกาศ Soyuz มีจุดประสงค์เพื่อขนส่งสมาชิกลูกเรือ Expedition 57 สองคนไปยังสถานีอวกาศนานาชาติ เนื่องจากความล้มเหลวของเครื่องกระตุ้นยานพาหนะปล่อย Soyuz-FG MS-10 ทำให้ไม่กี่นาทีหลังจากการออกตัว ยานเกิดความล้มเหลวในสถานการณ์ฉุกเฉินเนื่องจากบูสเตอร์และต้องกลับมายังโลก ลูกเรือทั้งสองคนกลับมาได้อย่างปลอดภัย และการยกเลิกเที่ยวบิน MS-10 เป็นตัวอย่างแรกของอุบัติเหตุที่เกิดจากลูกเรือรัสเซียในรอบ 35 ปีนับตั้งแต่ Soyuz T-10-1",
         badge:"ความล้มเหลวในการปล่อยยาน",
         budget:0,
@@ -86,7 +92,7 @@
     {
         id: 8,
         name: "The MOSAiC",
-        highlight: "ยินดีด้วย! เรือที่คุณสร้างได้นำนักวิทยาศาสตร์เข้าสู่ขั้วโลกเหนือเพื่อสำรวจต้นตอของปัญหาภาวะโลกร้อน",
+        result: "ยินดีด้วย! เรือที่คุณสร้างได้นำนักวิทยาศาสตร์เข้าสู่ขั้วโลกเหนือเพื่อสำรวจต้นตอของปัญหาภาวะโลกร้อน",
         details:"เรือวิจัยโลร์สเติร์นนำคณะนักวิทยาศาสตร์นานาชาติ ออกเดินทางจากท่าเรือเมืองทรอมโซในนอร์เวย์ มุ่งหน้าสู่ภูมิภาคอาร์ติกแถบขั้วโลกเหนือ ที่ซึ่งจะปักหลักอยู่นาน 1 ปี เพื่อทำการสำรวจวิจัยเกี่ยวกับการเปลี่ยนแปลงของสภาพภูมิอากาศโลก ซึ่งเป็นต้นตอของปัญหาภาวะโลกร้อน",
         badge:"กัปตันผู้พิชิตโลกร้อน",
         budget:165000000,
@@ -98,7 +104,7 @@
     {
         id: 9,
         name: "Mars orbiter mission",
-        highlight: "ว้าว คุณได้สร้างเทคโนโลยีทางวิทยาศาสตร์เพื่อใช้ในการปฏิบัติการสำรวจดาวอังคารแล้ว",
+        result: "ว้าว คุณได้สร้างเทคโนโลยีทางวิทยาศาสตร์เพื่อใช้ในการปฏิบัติการสำรวจดาวอังคารแล้ว",
         details:"โครงการพัฒนาเทคโนโลยีสำหรับการออกแบบและการวางแผนจัดการ การปฎิบัติภารกิจระหว่างดาวเคราะห์ และ สำรวจลักษณะพื้นผิวของดาวอังคาร การสังเกตุชั้นบรรยากาศของดาวอังคารโดยใช้เครื่องมือทางวิทยาศาสตร์",
         badge:"นักสำรวจดาวอังคาร",
         budget:74000000,
@@ -110,7 +116,7 @@
     {
         id: 10,
         name: "XMM-Newton",
-        highlight: "สุดยอด ด้วยกล้องโทรทรรศน์ที่คุณได้สร้างขึ้นทำให้สามารถส่องได้ออกนอกไปในอวกาศเพื่อเฝ้าดูความลับของจักรวาล",
+        result: "สุดยอด ด้วยกล้องโทรทรรศน์ที่คุณได้สร้างขึ้นทำให้สามารถส่องได้ออกนอกไปในอวกาศเพื่อเฝ้าดูความลับของจักรวาล",
         details:"โครงการเกี่ยวกับการตรวจจับและศึกษาแหล่งกำเนิดรังสีเอกซ์บนท้องฟ้าผ่านดาวเทียมที่ติดตั้งกล้องโทรทรรศน์ในอวกาศเพราะเนื่องจากชั้นบรรยากาศของโลกปิดกั้นรังสีเอกซ์ทั้งหมด รวมถึงใช้ในการไขความลึกลับของจักรวาล",
         badge:"สิ่งลึกลับในอวกาศ",
         budget:816000000,
