--- a/project.json
+++ b/project.json
@@ -6,6 +6,7 @@
         details:"Apollo 11 เป็นโครงการอวกาศที่มนุษย์ลงจอดบนดวงจันทร์ได้เป็นครั้งแรก โดยผู้บัญชาการนีลอาร์มสตรองและนักบินโมดูลดวงจันทร์ Buzz Aldrin จากลูกเรือชาวอเมริกันที่ลงจอดด้วย Apollo Lunar Module Eagle ซึ่ง นีล อาร์มสตรองได้กลายเป็นมนุษย์คนแรกที่ได้ก้าวขึ้นบนพื้นผิวดวงจันทร์",
         token:"50",
         state:"Good",
+        points:500,
         badge:"ผู้กล้าแห่งดวงจันทร์",
         budget:152000000000,
         currency:"billion",
@@ -20,6 +21,7 @@
         details:"กล้องโทรทรรศน์อวกาศฮับเบิล (อังกฤษ: Hubble Space Telescope) คือ กล้องโทรทรรศน์ในวงโคจรของโลกที่กระสวยอวกาศดิสคัฟเวอรีนำส่งขึ้นสู่วงโคจรเมื่อเดือนเมษายน ค.ศ. 1990 ตั้งชื่อตามนักดาราศาสตร์ชาวอเมริกันชื่อ เอ็ดวิน ฮับเบิล",
         token:"20",
         state:"Good",
+        points:100,
         badge:"กาแล็กซี่ที่กว้างใหญ่",
         budget:36000000,
         currency:"million",
@@ -34,6 +36,7 @@
         details:"เครื่องบินความเร็วเหนือเสียงที่ดำเนินการโดยกองทัพสหรัฐอเมริกา โดยเป็นเครื่องบินที่เก็บบันทึกค่าความเร็วและระดับความสูงเมื่อถึงขอบอวกาศและส่งข้อมูลอันเป็นประโยชน์ที่ใช้ในการออกแบบเครื่องบินและยานอวกาศ",
         token:"10",
         state:"Good",
+        points:30,
         badge:"เจ้าแห่งความเร็ว",
         budget:9000000,
         currency:"million",
@@ -48,6 +51,7 @@
         details:"กระสวยอวกาศชาเลนเจอร์ เป็นกระสวยอวกาศลำที่สองที่ใช้ปฏิบัติภารกิจในอวกาศขององค์การนาซ่า ปฏิบัติภารกิจมาแล้วถึง 9 ครั้งก่อนที่จะมาประสบอุบัติเหตุกระสวยอวกาศระเบิด(ในภารกิจที่ STS-51-L) ในวันที่ 28 มกราคม 1986 หลังจากที่ปล่อยกระสวยสู่ท้องฟ้าได้ 73 วินาที และนักบินอวกาศทั้ง 7 เสียชีวิตทั้งหมด",
         token:"20",
         state:"Bad",
+        points:400,
         badge:"ความสูญเสียครั้งใหญ่",
         budget:0,
         currency:"-",
@@ -60,7 +64,10 @@
         name: "Orbiter Vehicle Designation (OV-102)",
         result: "แย่แล้ว! ยานขนส่งอวกาศโคลัมเบียที่กำลังเดินทางกลับพื้นโลกเกิดการระเบิดขึ้น ทำให้สูญเสียนักบินของเราไปถึง 7 คน",
         details:"ยานขนส่งอวกาศโคลัมเบียขององค์การนาซา เกิดการระเบิดเหนือท้องฟ้าของสหรัฐฯ ขณะกำลังเดินทางกลับสู่พื้นโลก อุบัติเหตุครั้งนี้ทำให้นักบิน 7 คนเสียชีวิต ยานขนส่งอวกาศโคลัมเบียระเบิดเมื่อเวลา 16 นาทีก่อนที่จะได้ร่อนลงจอดที่ศูนย์อวกาศเคเนดีในฟลอริดาตามกำหนดการ โคลัมเบียเพิ่งจะกลับจากการปฏิบัติภารกิจในวงโคจรรอบโลกเป็นเวลานาน 16 วัน ซึ่งมีเป้าหมายในการทดลองทางวิทยาศาสตร์หลายสิบรายการ",
-        badge:"อุบัติเหตุร้ายแรงที่ไม่คาดคิด",
+        token:"40",
+        state:"Bad",
+        points:800,
+        \badge:"อุบัติเหตุร้ายแรงที่ไม่คาดคิด",
         budget:0,
         currency:"-",
         img:{badge_img:"b5.svg",
@@ -72,6 +79,9 @@
         name: "Glory mission",
         result: "แจ้งเตือน! ขณะนี้จรวด Taurus XLของเราที่ได้ส่งขึ้นไปไม่สามารถสลัดดาวเทียวออกจากตัวจรวดได้เพราะอุปกรณ์ไม่เป็นไปตามมาตรฐาน  ทำให้กระสวยและดาวเทียวตกอยู่กลางมหาสมุทร",
         details:"โครงการดาวเทียมที่วางแผนไว้เพื่อเฝ้าสังเกตระดับของก๊าซคาร์บอนไดออกไซด์ (CO2) ในชั้นบรรยากาศ และรวบรวมข้อมูลเพื่อทำความเข้าใจในวัฏจักรของธาตุคาร์บอน ในวันที่ 24 กุมภาพันธ์ ค.ศ. 2009 จรวดชื่อ Taurus XL ถูกส่งขึ้นไป เพื่อนำดาวเทียมเข้าสู่วงโคจร แต่เกิดความผิดพลาดขึ้น เนื่องจาก Payload fairing ไม่ได้ถูกสลัดออกจากดาวเทียมตามแผน ทำให้กระสวยทั้งหมดพร้อมกับดาวเทียมตกลงสู่มหาสมุทรใกล้กับแอนตาร์กติกา วันที่ 4 มีนาคม ค.ศ. 2011 เกิดความผิดพลาดในทำนองเดียวกัน ผลจากการสอบสวนพบว่าสาเหตุของความล้มเหลวทั้ง 2 ครั้ง เกิดจากชิ้นส่วนอลูมิเนียมที่ถูกอัดขึ้นรูป และใช้เป็นส่วนประกอบของ Payload fairing ที่ไม่เป็นไปตามมาตรฐาน",
+        token:"15",
+        state:"Bad",
+        points:300,
         badge:"ความผิดพลาดจากอุปกรณ์ที่ผิดรูป",
         budget:0,
         currency:"-",
@@ -84,6 +94,9 @@
         name: "Soyuz MS-10",
         result: "ทางเราพบว่ายานอวกาศ Soyuz MS-10 ของคุณเกิดอุบัติเหตุในการปล่อยยานทำให้ต้องกลับมายังโลก โชคดี! ทางเราไม่พบผู้เสียชีวิตในอุบัติเหตุ",
         details:"ยานอวกาศ Soyuz มีจุดประสงค์เพื่อขนส่งสมาชิกลูกเรือ Expedition 57 สองคนไปยังสถานีอวกาศนานาชาติ เนื่องจากความล้มเหลวของเครื่องกระตุ้นยานพาหนะปล่อย Soyuz-FG MS-10 ทำให้ไม่กี่นาทีหลังจากการออกตัว ยานเกิดความล้มเหลวในสถานการณ์ฉุกเฉินเนื่องจากบูสเตอร์และต้องกลับมายังโลก ลูกเรือทั้งสองคนกลับมาได้อย่างปลอดภัย และการยกเลิกเที่ยวบิน MS-10 เป็นตัวอย่างแรกของอุบัติเหตุที่เกิดจากลูกเรือรัสเซียในรอบ 35 ปีนับตั้งแต่ Soyuz T-10-1",
+        token:"10",
+        state:"Bad",
+        points:200,
         badge:"ความล้มเหลวในการปล่อยยาน",
         budget:0,
         currency:"-",
@@ -96,6 +109,9 @@
         name: "The MOSAiC",
         result: "ยินดีด้วย! เรือที่คุณสร้างได้นำนักวิทยาศาสตร์เข้าสู่ขั้วโลกเหนือเพื่อสำรวจต้นตอของปัญหาภาวะโลกร้อน",
         details:"เรือวิจัยโลร์สเติร์นนำคณะนักวิทยาศาสตร์นานาชาติ ออกเดินทางจากท่าเรือเมืองทรอมโซในนอร์เวย์ มุ่งหน้าสู่ภูมิภาคอาร์ติกแถบขั้วโลกเหนือ ที่ซึ่งจะปักหลักอยู่นาน 1 ปี เพื่อทำการสำรวจวิจัยเกี่ยวกับการเปลี่ยนแปลงของสภาพภูมิอากาศโลก ซึ่งเป็นต้นตอของปัญหาภาวะโลกร้อน",
+        token:"30",
+        state:"Good",
+        points:300,
         badge:"กัปตันผู้พิชิตโลกร้อน",
         budget:165000000,
         currency:"million",
@@ -108,6 +124,9 @@
         name: "Mars orbiter mission",
         result: "ว้าว คุณได้สร้างเทคโนโลยีทางวิทยาศาสตร์เพื่อใช้ในการปฏิบัติการสำรวจดาวอังคารแล้ว",
         details:"โครงการพัฒนาเทคโนโลยีสำหรับการออกแบบและการวางแผนจัดการ การปฎิบัติภารกิจระหว่างดาวเคราะห์ และ สำรวจลักษณะพื้นผิวของดาวอังคาร การสังเกตุชั้นบรรยากาศของดาวอังคารโดยใช้เครื่องมือทางวิทยาศาสตร์",
+        token:"10",
+        state:"Good",
+        points:100,
         badge:"นักสำรวจดาวอังคาร",
         budget:74000000,
         currency:"million",
@@ -120,11 +139,44 @@
         name: "XMM-Newton",
         result: "สุดยอด ด้วยกล้องโทรทรรศน์ที่คุณได้สร้างขึ้นทำให้สามารถส่องได้ออกนอกไปในอวกาศเพื่อเฝ้าดูความลับของจักรวาล",
         details:"โครงการเกี่ยวกับการตรวจจับและศึกษาแหล่งกำเนิดรังสีเอกซ์บนท้องฟ้าผ่านดาวเทียมที่ติดตั้งกล้องโทรทรรศน์ในอวกาศเพราะเนื่องจากชั้นบรรยากาศของโลกปิดกั้นรังสีเอกซ์ทั้งหมด รวมถึงใช้ในการไขความลึกลับของจักรวาล",
+        token:"25",
+        state:"Good",
+        points:250,
         badge:"สิ่งลึกลับในอวกาศ",
         budget:816000000,
         currency:"million",
         img:{badge_img:"b10.svg",
             project_img:"p10.jpg"
+        }
+    },
+    {
+        id: 11,
+        name: "COVAX",
+        result: "ยินดีด้วย ตอนนี้คุณมีวัคซีนต้านCovid-19และยังได้มอบวัคซีนไปทั่วโลกแล้ว",
+        details:"วิจัยและพัฒนาวัคซีนต้านโควิด-19 รวมทั้งส่งมอบวัคซีน 2 พันล้านโดสให้แก่นานาประเทศทั่วโลก",
+        token:"40",
+        state:"Good",
+        points:400,
+        badge:"วัคซีนต้านCovid-19",
+        budget:1400000000,
+        currency:"billion",
+        img:{badge_img:"b11.svg",
+            project_img:"p11.jpg"
+        }
+    },
+    {
+        id: 12,
+        name: "Neuralink",
+        result: "ตอนนี้คุณได้พัฒนาชิปสั่งการผ่านสื่อประสาทสมอง ทำให้สามารถช่วยเหลือผู้ป่วยที่สูญเสียการควบคุม",
+        details:"พัฒนาระบบเส้นสื่อประสาทที่เชื่อมระหว่างสมองของคนเข้ากับชิปคอมพิวเตอร์ และสามารถแปลงความต้องการหรือคำสั่งของสมองออกมาให้กลายเป็นการกระทำ สามารถปลูกถ่ายให้กับผู้ป่วยอัมพาต ผู้ป่วยโรคหลอดเลือดสมอง ผู้ป่วยโรคมะเร็ง หรือผู้ป่วยโรคอื่นๆ ที่สูญเสียการควบคุมร่างกาย",
+        token:"20",
+        state:"Good",
+        points:200,
+        badge:"ชิปประสาทสั่งการ",
+        budget:100000000,
+        currency:"million",
+        img:{badge_img:"b12.svg",
+            project_img:"p12.jpg"
         }
     }
 ]
