--- a/project.json
+++ b/project.json
@@ -179,4 +179,124 @@
             project_img:"p12.jpg"
         }
     }
+    {
+        id: 13,
+        name: "Voyager",
+        result: "ยินดีด้วย คุณได้สร้างยานสำรวจอวกาศเพื่อการสำรวจระบบสุริยะ",
+        details:"ยานสำรวจอวกาศไร้คนขับเคลื่อน ประกอบด้วย Voyager1 และ Voyager2 เพื่อเก็บข้อมูลของระบบสุริยะ เป็นยานที่มีอายุยาวนานและสำรวจไกลที่สุดในประวัติศาสตร์ มวลมนุษยชาติ",
+        token:"30",
+        state:"Good",
+        points:300,
+        badge:"นักสำรวจระบบสุริยะ",
+        budget:856000000,
+        currency:"million",
+        img:{badge_img:"b13.svg",
+            project_img:"p13.jpg"
+        }
+    }
+    {
+        id: 14,
+        name: "China Sky Eye",
+        result: "ยินดีด้วย คุณได้สร้างกล้องโทรทรรศน์ China Sky Eye ทำให้ตอนนี้สามารถศึกษาและเข้าใจถึงการเกิดของจักรวาลได้",
+        details:"กล้องโทรทรรศน์ที่ใหญ่ที่สุดของโลก ใช้ตรวจจับสัญญาณคลื่นแม่เหล็กจากเศษซากของดาวฤกษ์เพื่อทำความเข้าใจการเกิดของจักรวาลรวมถึงการค้นหาสัญญาณสิ่งมีชีวิตทรงภูมิปัญญานอกโลก",
+        token:"15",
+        state:"Good",
+        points:150,
+        badge:"ผู้เฝ้ามองจักรวาล",
+        budget:171000000,
+        currency:"million",
+        img:{badge_img:"b14.svg",
+            project_img:"p14.jpg"
+        }
+    }
+    {
+        id: 15,
+        name: "SpaceX",
+        result: "ยินดีด้วย โครงการ SpaceX ของคุณได้สร้างความประหลาดใจเป็นอย่างมาก นอกจากลดต้นทุนการขนส่งแล้วยังทำให้สามารถตั้งรกรากบนดาวอังคารได้",
+        details:"โครงการที่มีเป้าหมายในการลดต้นทุนการขนส่งทางอวกาศเพื่อให้สามารถตั้งรกรากบนดาวอังคารได้ SpaceX ได้พัฒนายานเปิดตัวหลายรุ่น เช่น กลุ่มดาวเทียม Starlink, ยานอวกาศขนส่ง Dragon และส่งมนุษย์ไปยังสถานีอวกาศนานาชาติในยาน Crew Dragon Demo-2",
+        token:"40",
+        state:"Good",
+        points:400,
+        badge:"ผู้บุกเบิกดาวอังคาร",
+        budget:6000000000,
+        currency:"billion",
+        img:{badge_img:"b15.svg",
+            project_img:"p15.jpg"
+        }
+    }
+    {
+        id: 16,
+        name: "Starlink",
+        result: "ยินดีด้วย กลุ่มดาวอินเตอร์เน็ตผ่านดาวเทียมของคุณได้สร้างประโยชน์ให้ทางการทหาร, วิทยาศาสตร์ และการสำรวจเป็นอย่างมาก",
+        details:"กลุ่มดาวอินเทอร์เน็ตผ่านดาวเทียมถูกสร้างขึ้นโดย SpaceX ให้บริการอินเทอร์เน็ตผ่านดาวเทียม ประกอบด้วยดาวเทียมขนาดเล็กจำนวนมากที่สร้างขึ้นจำนวนมากในวงโคจรของโลกโดยทำงานร่วมกับเครื่องรับส่งสัญญาณภาคพื้นดิน SpaceX ยังวางแผนที่จะขายดาวเทียมบางส่วนเพื่อวัตถุประสงค์ทางการทหาร, วิทยาศาสตร์หรือการสำรวจ โดยมีศูนย์พัฒนาดาวเทียม SpaceX ในเรดมันด์วอชิงตันเป็นที่ตั้งของการวิจัยการพัฒนาการผลิตและการควบคุมบนวงโคจรของ Starlinkย",
+        token:"40",
+        state:"Good",
+        points:400,
+        badge:"สุดยอดเครือข่าย",
+        budget:60000000000,
+        currency:"billion",
+        img:{badge_img:"b16.svg",
+            project_img:"p16.jpg"
+        }
+    }
+    {
+        id: 17,
+        name: "International Space Station, ISS",
+        result: "ยินดีด้วย คุณได้สร้างสถานีอวกาศนานาชาติเป็นห้องปฏิบัติการลอยฟ้าในชื่อ ISS เพื่อใช้ในการทำการทดลองต่างๆ",
+        details:"สถานีอวกาศนานาชาติเป็นห้องปฏิบัติการลอยฟ้าซึ่งโคจรรอบโลก ทำหน้าที่เป็นห้องทดลองวิจัยอย่างถาวรในอวกาศ  ทำการทดลองด้านต่าง ๆ ได้แก่ ชีววิทยา ชีววิทยามนุษย์ ฟิสิกส์ ดาราศาสตร์ และ อุตุนิยมวิทยา เราสามารถมองเห็นสถานีอวกาศนานาชาติได้ด้วยตาเปล่าจากพื้นโลก",
+        token:"50",
+        state:"Good",
+        points:500,
+        badge:"ห้องปฏิบัติการลอยฟ้า",
+        budget:35000000000, /*35-100 billion*/
+        currency:"billion",
+        img:{badge_img:"b17.svg",
+            project_img:"p17.jpg"
+        }
+    }
+    {
+        id: 18,
+        name: "Svalbard International Seed Vault",
+        result: "สุดยอด คุณได้สร้างอุโมงค์เมล็ดพืชขึ้นมาซึ่งมีพืชพันธุ์มากกว่าถึง 1 ล้านชนิด",
+        details:"อุโมงค์เมล็ดพันธุ์พืชแห่งสฟาลบาร์ เป็นแหล่งสำรองเมล็ดพรรณจากทั่วโลก ตั้งอยู่บนเกาะสปีตสเบร์เกน ประเทศนอร์เวย์ ปัจจุบันมีเมล็ดพันธุ์พืชมากกว่า 1 ล้านชนิด ทั้งหมดแยกเก็บรักษาในหีบห่อที่มิดชิด พร้อมควบคุมความชื้นภายใน ใส่ไว้ในห้องนิรภัยที่มีอุณหภูมิติดลบ  -18 องศาเซลเซียส ซึ่งสามารถเก็บไว้ใช้เมื่อเกิดวิกฤติต่าง ๆ ในอนาคตมากถึง 1,000 ปีเลย!",
+        token:"5",
+        state:"Good",
+        points:50,
+        badge:"นักพฤกษศาสตร์",
+        budget:9000000,
+        currency:"million",
+        img:{badge_img:"b18.svg",
+            project_img:"p18.jpg"
+        }
+    }
+    {
+        id: 19,
+        name: "Space Elevator",
+        result: "ไม่น่าเชื่อ! คุณได้สร้างลิฟต์ที่จะส่งขึ้นไปยังสถานีอวกาศได้โดยไม่ต้องพึ่งการยิงจรวดส่งคนขึ้นไป อีกทั้งยังประหยัดค่าใช้จ่ายอีกด้วย",
+        details:"ประเทศญี่ปุ่นจะก่อสร้างปล่องลิฟต์สูงขึ้นไปจนถึงสถานีอวกาศปลายทางที่ความสูง 35,000 กิโลเมตรเหนือพื้นโลก ผู้เชี่ยวชาญด้านเทคโนโลยีมองกันว่า ลิฟต์อวกาศที่สามารถขนส่งผู้คนและสิ่งของจากพื้นโลกขึ้นไปสู่อวกาศได้โดยตรง อาจเป็นทางเลือกที่ดีกว่าการยิงจรวด เนื่องจากประหยัดเชื้อเพลิงมากกว่า ทั้งเสียเวลาเตรียมการเดินทางและเสียค่าใช้จ่ายน้อยกว่ากันมาก โดยตั้งเป้าให้ใช้งานได้จริงภายในปี 2050",
+        token:"25",
+        state:"Good",
+        points:250,
+        badge:"ประตูลิฟต์สู่อวกาศ",
+        budget:90000000000,
+        currency:"billion",
+        img:{badge_img:"b19.svg",
+            project_img:"p19.jpg"
+        }
+    }
+    {
+        id: 20,
+        name: "ExoMars",
+        result: "ยินดีด้วย ภารกิจExoMars ของคุณได้ทำการสำรวจดาวอังคารด้วยTrace Gas Orbiter เพื่อตรวจสอบความเป็นไปได้ที่จะมีสิ่งมีชีวิตบนดาวอังคาร และทกลองการลงจอดบนดาวอังคาร",
+        details:"เป็นภารกิจสำรวจดาวอังคารแบ่งออกเป็น 2 เฟส เฟสที่ 1 ที่จะถูกส่งขึ้นไปวันนี้ประกอบด้วย Trace Gas Orbiter ที่จะโคจรรอบดาวอังคารเพื่อตรวจวัดก๊าซบนผิวดาว โดยเฉพาะมีเทนที่บ่งชี้ถึงความเป็นไปได้ที่จะมีสิ่งมีชีวิตบนดาวอังคาร ยานอีกลำที่ส่งไปพร้อมกันคือ Schiaparelli EDM ที่จะลงจอดบนผิวดาว เพื่อทดสอบเทคโนโลยีการลงจอด เป็นการนำร่องสำหรับ เฟส 2 ที่จะส่งยานสำรวจ (rover) ไปลงจอดบนผิวดาวในอีก 2 – 3 ปีข้างหน้า สำหรับ Trace Gas Orbiter และ Schiaparelli EDM จะถูกส่งโดยจรวด Proton ของรัสเซียจากฐานปล่อยจรวด ไบโครนัวร์ ประเทศคาซัคสถาน",
+        token:"25",
+        state:"Good",
+        points:250,
+        badge:"ผู้พิชิตดาวอังคาร",
+        budget:1300000000, /*>1.3 Billion*/
+        currency:"billion",
+        img:{badge_img:"b20.svg",
+            project_img:"p20.jpg"
+        }
+    }
 ]
